# 42cursus-python_modules

module_00/ex00/: answers.txt  requirements.txt
module_00/ex01/: exec.py
module_00/ex02/: whois.py
module_00/ex03/: count.py
module_00/ex04/: operations.py
module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module_00/ex06/: recipe.py
module_00/ex07/: filterwords.py
module_00/ex08/: sos.py
module_00/ex09/: guess.py
module_00/ex10/: loading.py
module_01/ex00/: book.py  recipe.py  test.py
module_01/ex01/: game.py
module_01/ex02/: test.py  vector.py
module_01/ex03/: generator.py
module_01/ex04/: eval.py
module_01/ex05/: banking_test.py  the_bank.py
module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py  test.py
module_02/ex01/: main.py
module_02/ex02/: logger.py
module_02/ex03/: csvreader.py  main.py
module_02/ex04/: LICENSE.md  README.md  build.sh  my_minipack.toml  pyproject.toml  setup(META_OPT2).py  setup.cfg  setup.py
module_02/ex04/src/my_minipack/: loading.py  logger.py  progressbar.py
module_02/ex04/tests/: main.py
module_02/ex05/: TinyStatistician.py
module_03/ex00/: NumPyCreator.py
module_03/ex01/: ImageProcessor.py
module_03/ex02/: ScrapBooker.py
module_03/ex03/: ColorFilter.py
module_03/ex04/: Kmeans.py
module_04/ex00/: FileLoader.py
module_04/ex01/: YoungestFellah.py
module_04/ex02/: FileLoader.py  ProportionBySport.py
module_04/ex03/: HowManyMedals.py
module_04/ex04/: SpatioTemporalData.py
module_04/ex05/: HowManyMedalsByCountry.py
module_04/ex06/: MyPlotLib.py
module_04/ex07/: Komparator.py  MyPlotLib.py
