[project]
name = "my_minipack"
version = "1.0.0"
authors = [
  { name="aabounak", email="aabounak@student.1337.ma" },
]
summary = "How to create a package in python."
home-page = "None"
readme = "README.md"
requires-python = ">=3.7"
license = "GPLv3"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Students",
  "Topic :: Education",
  "Topic :: HowTo",
  "Topic :: Package",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

project.urls]
"Homepage" = "https://github.com/ayoubabounakif/42cursus-python/module02/ex04"
"Bug Tracker" = "https://github.com/ayoubabounakif/42cursus-python/issues"

[project.metadata]
location = "[PATH TO BOOTCAMP PYTHON]/module02/tmp_env/lib/python3.7/site-packages"
requires = []
required-by = []
metadata-version = "2.1"
installer = "pip"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
