[metadata]
name = my_minipack
version = 1.0.0
author = aabounak
author_email = aabounak@student.1337.ma
description = How to create a package in python.
license = GPLv3
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only